# Nameplate

./: .gitignore  AGENTS.md  CHANGELOG.md  Icon.icns  Package.resolved  Package.swift  README.md  appcast.xml  version.env
Scripts/: build_icon.sh  make_appcast.sh  package_app.sh  sign-and-notarize.sh
Sources/Nameplate/: AppMain.swift  AppServices.swift  AppSettings.swift  AttentionController.swift  ConfigImportController.swift  InfoLineProvider.swift  InstallOrigin.swift  OverlayController.swift  OverlayView.swift  RemoteViewMonitor.swift  SettingsAboutPane.swift  SettingsComponents.swift  SettingsGeneralPane.swift  SettingsIdentityPane.swift  SettingsLayersPane.swift  SettingsSplashPane.swift  SettingsView.swift  SettingsWindowController.swift  SplashController.swift  StatusItemController.swift  SystemInfo.swift  UpdaterController.swift
Sources/NameplateCLI/: main.swift
Sources/NameplateCore/: AttentionAck.swift  AttentionRequest.swift  ConfigProposal.swift  FleetFile.swift  Identity.swift  InfoLine.swift  RemoteViewing.swift
Tests/NameplateCoreTests/: AttentionAckTests.swift  ConfigProposalTests.swift  InfoLineTests.swift  NameplateCoreTests.swift
Tests/NameplateTests/: AttentionControllerTests.swift  InstallOriginTests.swift
docs/: CNAME  index.html
linux/: README.md
linux/nameplate/: Cargo.toml
linux/nameplate-core/: Cargo.toml
linux/nameplate/src/: config.rs  main.rs  overlays.rs  platform.rs
skills/nameplate-attention/: SKILL.md
windows/: Directory.Build.props  README.md
windows/Nameplate.App/: ConfigStore.cs  GlobalMouseMonitor.cs  (+10 more)
(+5 files in other folders)
