[package]
name = "nameplate"
version = "0.3.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
layer-shell = ["dep:gtk4-layer-shell"]

[dependencies]
cairo-rs = "0.22"
gtk = { package = "gtk4", version = "0.11" }
libc = "0.2"
nameplate-core = { path = "../nameplate-core" }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gdk4-x11 = { version = "0.11", features = ["xlib"] }
gtk4-layer-shell = { version = "0.8", optional = true }
